--- a/components/header.html
+++ b/components/header.html
@@ -1,21 +1,30 @@
-<nav>
-  <div class="container">
-    <h1 class="logo"><a href="/index.html">Raphael DIEZ PECOSTE</a></h1>
-    <ul class="nav-links">
-      <li><a href="/index.html#about">À propos</a></li>
-      <li><a href="/index.html#skills">Compétences</a></li>
-      <li><a href="/index.html#experience">Expérience</a></li>
-      <li><a href="/index.html#education">Formation</a></li>
-      <li><a href="/index.html#projects">Projets</a></li>
-      <li><a href="/index.html#contact">Contact</a></li>
-    </ul>
-  </div>
-        <!-- Liens de contact -->
-    <div class="contact-nav">
-        <a href="https://github.com/RaphaelDP" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/raphael-diezpecoste" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="https://gitlab.com/RaphaelDP" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a>
-        <a href="mailto:raphael.diezpecoste.pro@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+<header>
+  <nav>
+    <div class="container">
+      <h1 class="logo">
+        <a href="/index.html">
+          <img src="/assets/logo.png" alt="Logo Raphael DIEZ PECOSTE">
+        </a>
+      </h1>
+      <ul class="nav-links">
+        <li><a href="/index.html#about"><i class="fas fa-user"></i> Profil</a></li>
+        <li><a href="/index.html#skills"><i class="fas fa-code"></i> Compétences</a></li>
+        <li><a href="/index.html#experience"><i class="fas fa-briefcase"></i> Expérience</a></li>
+        <li><a href="/index.html#education"><i class="fas fa-graduation-cap"></i> Formation</a></li>
+        <li><a href="/index.html#projects"><i class="fas fa-project-diagram"></i> Projets</a></li>
+        <!-- Contact avec menu déroulant -->
+        <li class="dropdown">
+          <a href="/index.html#contact">Contact ▾</a>
+          <ul class="dropdown-menu">
+            <li><a href="https://github.com/RaphaelDP" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/raphael-diezpecoste" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a href="https://gitlab.com/RaphaelDP" target="_blank"><i class="fab fa-gitlab"></i> GitLab</a></li>
+            <li><a href="mailto:raphael.diezpecoste.pro@gmail.com"><i class="fas fa-envelope"></i> Email</a></li>
+          </ul>
+        </li>
+      </ul>
+
     </div>
-</div>
-</nav>
+  </nav>
+</header>
+
