--- a/components/header.html
+++ b/components/header.html
@@ -1,27 +1,65 @@
-<!DOCTYPE html>
+<!doctype html>
 <header>
   <nav>
     <div class="container">
       <h1 class="logo">
         <a href="/index.html">
-          <img src="/assets/logo.png" alt="Logo Raphael DIEZ PECOSTE">
+          <img src="/assets/logo.png" alt="Logo Raphael DIEZ PECOSTE" />
         </a>
       </h1>
       <div class="menu-wrapper">
         <ul class="nav-links">
-          <li><a href="/index.html#about"><i class="fas fa-user"></i> Profil</a></li>
-          <li><a href="/index.html#skills"><i class="fas fa-code"></i> Compétences</a></li>
-          <li><a href="/index.html#experience"><i class="fas fa-briefcase"></i> Expérience</a></li>
-          <li><a href="/index.html#education"><i class="fas fa-graduation-cap"></i> Formation</a></li>
-          <li><a href="/index.html#projects"><i class="fas fa-project-diagram"></i> Projets</a></li>
+          <li>
+            <a href="/index.html#about"><i class="fas fa-user"></i> Profil</a>
+          </li>
+          <li>
+            <a href="/index.html#skills"
+              ><i class="fas fa-code"></i> Compétences</a
+            >
+          </li>
+          <li>
+            <a href="/index.html#experience"
+              ><i class="fas fa-briefcase"></i> Expérience</a
+            >
+          </li>
+          <li>
+            <a href="/index.html#education"
+              ><i class="fas fa-graduation-cap"></i> Formation</a
+            >
+          </li>
+          <li>
+            <a href="/index.html#projects"
+              ><i class="fas fa-project-diagram"></i> Projets</a
+            >
+          </li>
           <!-- Contact avec menu déroulant -->
           <li class="dropdown">
-            <a href="/index.html#contact"><i class="fa fa-address-book"></i> Contact</a>
+            <a href="/index.html#contact"
+              ><i class="fa fa-address-book"></i> Contact</a
+            >
             <ul class="dropdown-menu">
-              <li><a href="https://github.com/RaphaelDP" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
-              <li><a href="https://www.linkedin.com/in/raphael-diezpecoste" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-              <li><a href="https://gitlab.com/RaphaelDP" target="_blank"><i class="fab fa-gitlab"></i> GitLab</a></li>
-              <li><a href="mailto:raphael.diezpecoste.pro@gmail.com"><i class="fas fa-envelope"></i> Email</a></li>
+              <li>
+                <a href="https://github.com/RaphaelDP" target="_blank"
+                  ><i class="fab fa-github"></i> GitHub</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/raphael-diezpecoste"
+                  target="_blank"
+                  ><i class="fab fa-linkedin"></i> LinkedIn</a
+                >
+              </li>
+              <li>
+                <a href="https://gitlab.com/RaphaelDP" target="_blank"
+                  ><i class="fab fa-gitlab"></i> GitLab</a
+                >
+              </li>
+              <li>
+                <a href="mailto:raphael.diezpecoste.pro@gmail.com"
+                  ><i class="fas fa-envelope"></i> Email</a
+                >
+              </li>
             </ul>
           </li>
         </ul>
