--- a/css/components.css
+++ b/css/components.css
@@ -1,4 +1,3 @@
-
 .cta-buttons {
   display: flex;
   gap: var(--space-2);
@@ -15,13 +14,14 @@
   font-size: var(--font-size-base);
 }
 
-
 .btn-primary {
   background-color: var(--primary-color);
   color: white;
 }
 
-.btn-primary:hover { background-color: var(--secondary-color); }
+.btn-primary:hover {
+  background-color: var(--secondary-color);
+}
 
 .btn-secondary {
   background-color: transparent;
@@ -30,7 +30,10 @@
   transition: all 0.3s;
 }
 
-.btn-secondary:hover { background-color: var(--primary-color); color: white; }
+.btn-secondary:hover {
+  background-color: var(--primary-color);
+  color: white;
+}
 
 .social-links {
   display: flex;
@@ -41,15 +44,15 @@
   color: var(--dark-color);
   font-size: clamp(1.2rem, 2.5vw, 1.6rem);
   transition: color 0.3s;
-  text-decoration:none;
-
+  text-decoration: none;
 }
 
-.social-links a:hover { color: var(--primary-color); }
-
+.social-links a:hover {
+  color: var(--primary-color);
+}
 
 .availability {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .available-badge {
