--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -2,9 +2,11 @@
   display: none;
   position: fixed;
   z-index: 999;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.8);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
   justify-content: center;
   align-items: center;
 }
