--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
     <div class="container">
       <h1 class="logo">
         <a href="/index.html">
-          <img src="/assets/logo.png" alt="Logo Raphael DIEZ PECOSTE" />
+          <img src="/assets/img/logo.png" alt="Logo Raphael DIEZ PECOSTE" />
         </a>
       </h1>
       <div class="menu-wrapper">
