--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -6,15 +6,17 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgb(0 0 0 / 80%);
   justify-content: center;
   align-items: center;
 }
+
 .lightbox img {
   max-width: 90%;
   max-height: 90%;
   border-radius: 8px;
 }
+
 .lightbox.active {
   display: flex;
 }
